samples/_failures_safe/1761317970_f96c07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_920fb30b.c: In function ‘main’:
./samples/SAFE/__tmp_920fb30b.c:182:15: error: expected ‘;’ at end of input
  182 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_920fb30b.c:182:9: error: expected declaration or statement at end of input
  182 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_920fb30b.c:182:9: error: expected declaration or statement at end of input
